# TempMail-UnofficialAPI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN_v1.1.0.md  README.cn.md  README.id.md  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  UPGRADE.md
csharp/: .env.example  README.md  TEST_REPORT.md  TempMail.sln
docs/: app.js  index.html  style.css
go/: README.md  TEST_REPORT.md  e2e_test.go  errors.go  go.mod  models.go  tempmail.go  tempmail_test.go
java/: README.md  TEST_REPORT.md  pom.xml
php/: README.md  (+2 more)
python/: README.md  TEST_REPORT.md  pyproject.toml
python/examples/: example_guerrillamail.py  example_mail_tm.py
python/tempmail_wrapper/: __init__.py  base.py  exceptions.py  factory.py  http_client.py  models.py
python/tempmail_wrapper/providers/: __init__.py  dropmail.py  email_temp.py  emailfake.py  generator_email.py  guerrilla_mail.py  mail_tm.py  mailnesia.py  ncaori_mail.py  one_sec_email.py  temp_mail_io.py  tempmail_lol.py  tempmail_plus.py  tempmailc.py  ten_minute_mail.py  yopmail.py  zoromail.py
python/tests/: conftest.py  test_e2e.py
rust/: Cargo.toml  README.md  TEST_REPORT.md
rust/examples/: basic.rs
rust/src/: error.rs  httpclient.rs  lib.rs  models.rs
rust/src/providers/: dropmail.rs  email_temp.rs  emailfake.rs  generator_email.rs  guerrilla_mail.rs  mail_tm.rs  mailnesia.rs  mod.rs  ncaori_mail.rs  one_sec_email.rs  temp_mail_io.rs  tempmail_lol.rs  tempmail_plus.rs  tempmailc.rs  ten_minute_mail.rs  yopmail.rs  zoromail.rs
rust/tests/: e2e.rs
(+137 files in other folders)
