[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempmail-wrapper"
version = "1.1.0"
description = "A unified Python wrapper for 16 temporary email services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "types-requests",
    "types-beautifulsoup4",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["tempmail_wrapper*"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests (real HTTP calls)",
]
