[package]
name = "tempmail-unofficial"
version = "1.1.0"
edition = "2021"
description = "Unofficial wrapper for 16 temporary email services"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
